--- a/WebApplicationDevelopment/Views/Account/MyAccounts.cshtml
+++ b/WebApplicationDevelopment/Views/Account/MyAccounts.cshtml
@@ -12,9 +12,126 @@
 
 <!-- Tab panes -->
 <div class="tab-content">
-    <div class="tab-pane active" id="portfolio">...</div>
-    <div class="tab-pane" id="profile">...</div>
-    <div class="tab-pane" id="preferences">...</div>
-</div>
+    <div class="tab-pane active" id="portfolio">
+
+        <!----------------------Current Stocks Owned -------------------->
+        <div class="panel panel-default panel-success">
+            <div class="panel-heading">
+                Stocks Currently Owned:
+            </div>
+
+            <div class="panel-body">
+                <asp:Label ID="lblNoCurrentStocks" Text="User has not added any stocks" runat="server" Visible="False"></asp:Label>
+                <table class="table table-striped table-hover ">
+                    <asp:Repeater runat="server"
+                                  ID="CurrentStocksRepeater"
+                                  ItemType="Tuple<String, BullMarket.Models.CurrentStocks>">
+                        <headertemplate>
+                            <!-----------------------Table Headings----------------------------->
+                            <thead>
+                                <tr>
+                                    <th>#</th>
+                                    <th>Name:</th>
+                                    <th>Symbol:</th>
+                                    <th>Initial Value:</th>
+                                    <th># of Shares:</th>
+                                    <th>Current Value:</th>
+                                    <th>Change Since Purchase:</th>
+                                    <th>Change Since Yesterday:</th>
+                                    <th>More Information:</th>
+                                </tr>
+                            </thead>
+                        </headertemplate>
+                        <tbody>
+                            <itemtemplate>
+                                <tr>
+                                    <td><%#: Container.ItemIndex + 1 %></td>
+                                    <td><%#: Item.Item2.TagApplication.CurrentStock.Name %></td>
+                                    <td><%#: Item.Item2.TagApplication.CurrentStock.Symbol %></td>
+                                    <td><%#: Item.Item2.TagApplication.CurrentStock.InitValue %></td>
+                                    <td><%#: Item.Item2.TagApplication.CurrentStock.NumShares %></td>
+                                    <td><%#: Item.Item2.TagApplication.CurrentStock.CurrentValue %></td>
+                                    <td><%#: Item.Item2.TagApplication.CurrentStock.ChangeSincePurchase %></td>
+                                    <td><%#: Item.Item2.TagApplication.CurrentStock.DailyChange %></td>
+                                    <td>
+                                        <button type="button" class="btn btn-primary btn-xs btn-success"
+                                                onclick="javascript:location.href = 'dynamic link to yahoo=<%#: Item.Item2.CurrentStock.Link %>';">
+                                            Stock Page
+                                        </button>
+                                    </td>
+                                </tr>
+                            </itemtemplate>
+                        </tbody>
+                    </asp:Repeater>
+                </table>
+            </div> <!--End of panel body-->
+        </div> <!--End of panel-->
+
+        <!----------------------Previously Stocks Owned/Sold/Removed -------------------->
+        <div class="panel panel-default panel-danger">
+            <div class="panel-heading">
+                Stocks Previously Owned:
+            </div>
+
+            <div class="panel-body">
+                <asp:Label ID="lblNoPreviousStocks" Text="User has not sold/removed any stocks" runat="server" Visible="False"></asp:Label>
+                <table class="table table-striped table-hover ">
+                    <asp:Repeater runat="server"
+                                  ID="PreviousStocksRepeater"
+                                  ItemType="Tuple<String, BullMarket.Models.PreviousStocks>">
+                        <headertemplate>
+                            <!-----------------------Table Headings----------------------------->
+                            <thead>
+                                <tr>
+                                    <th>#</th>
+                                    <th>Name:</th>
+                                    <th>Symbol:</th>
+                                    <th>Value at Sale:</th>
+                                    <th># of Shares:</th>
+                                    <th>Current Value:</th>
+                                    <th>Change Since Sale:</th>
+                                    <th>Change Since Yesterday:</th>
+                                    <th>More Information:</th>
+                                </tr>
+                            </thead>
+                        </headertemplate>
+                        <tbody>
+                            <itemtemplate>
+                                <tr>
+                                    <td><%#: Container.ItemIndex + 1 %></td>
+                                    <td><%#: Item.Item2.TagApplication.PreviousStock.Name %></td>
+                                    <td><%#: Item.Item2.TagApplication.PreviousStock.Symbol %></td>
+                                    <td><%#: Item.Item2.TagApplication.PreviousStock.ValueAtSale %></td>
+                                    <td><%#: Item.Item2.TagApplication.PreviousStock.NumShares %></td>
+                                    <td><%#: Item.Item2.TagApplication.PreviousStock.CurrentValue %></td>
+                                    <td><%#: Item.Item2.TagApplication.PreviousStock.ChangeSinceSale %></td>
+                                    <td><%#: Item.Item2.TagApplication.PreviousStock.DailyChange %></td>
+                                    <td>
+                                        <button type="button" class="btn btn-primary btn-xs btn-success"
+                                                onclick="javascript:location.href = 'dynamic link to yahoo=<%#: Item.Item2.PreviousStock.Link %>';">
+                                            Stock Page
+                                        </button>
+                                    </td>
+                                </tr>
+                            </itemtemplate>
+                        </tbody>
+                    </asp:Repeater>
+                </table>
+            </div> <!--End of panel body-->
+        </div> <!--End of panel-->
+    </div> <!--End of portfolio tab-->
+
+
+    <div class="tab-pane" id="profile">...</div><!--End of profile tab-->
+    
+    
+    
+    
+    <div class="tab-pane" id="preferences">...</div><!--End of preferences tab-->
+
+
+
+
+</div> <!--End of all tabs-->
 
 @Scripts.Render("~/bundles/AccountTabs")
